force-app/main/default/objects/Airline_Trip_Emissions_Estimate__c/fields/CO2e_lb__c.field-meta.xml
<CustomField>
    <fullName>CO2e_lb__c</fullName>
    <description>Carbon dioxide equivalent (CO2e) in pounds (lb).</description>
    <label>CO2e lb</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>