force-app/main/default/objects/Airline_Trip_Emissions_Estimate__c/fields/Final_Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>Final_Destination_Airport__c</fullName>
    <description>Represents the final airport in a one-way trip or, for a return trip, the destination airport prior to the return.</description>
    <label>Final Destination Airport</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IATA_Airport_Codes</valueSetName>
    </valueSet>
</CustomField>