force-app/main/default/objects/Airline_Trip_Emissions_Estimate__c/fields/Legs__c.field-meta.xml
<CustomField>
    <fullName>Legs__c</fullName>
    <description>Lists individual legs of the trip.</description>
    <label>Legs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>