force-app/main/default/objects/Airline_Trip_Emissions_Estimate__c/fields/Number_of_Legs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Legs__c</fullName>
    <description>Indicates the total number of legs for the trip.</description>
    <label>Number of Legs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>