force-app/main/default/objects/Airline_Trip_Emissions_Estimate__c/fields/Number_of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Passengers__c</fullName>
    <description>Indicates the number of passengers taking the trip.</description>
    <label>Number of Passengers</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>