force-app/main/default/objects/Airline_Trip_Emissions_Estimate__c/fields/Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance__c</fullName>
    <description>Text field that combines the distance (in miles or kilometers) and the distance unit (mi or km).</description>
    <label>Total Distance</label>
    <length>25</length>
    <type>Text</type>
</CustomField>