force-app/main/default/objects/Airline_Trip_Emissions_Estimate__c/fields/Trip_Distance__c.field-meta.xml
<CustomField>
    <fullName>Trip_Distance__c</fullName>
    <formula>TEXT( Flight_Distance__c ) + &apos; &apos; +  TEXT(Distance_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Distance</label>
    <type>Text</type>
</CustomField>