force-app/main/default/objects/Airline_Trip_Emissions_Estimate__c/validationRules/LayoverAndNotNonStop.validationRule-meta.xml
<ValidationRule>
    <fullName>LayoverAndNotNonStop</fullName>
    <active>true</active>
    <description>Ensures that a layover airport is selected when the Non-Stop checkbox is NOT checked.</description>
    <errorConditionFormula>Non_Stop_Flight__c == false &amp;&amp; TEXT( Layover_Airport__c )== &apos;&apos;</errorConditionFormula>
    <errorDisplayField>CO2e_g__c</errorDisplayField>
    <errorMessage>You must select a Layover Airport when the Non-Stop checkbox is NOT checked.</errorMessage>
</ValidationRule>